@@ -199,3 +199,18 @@ evolver.il <- function(graph, cats, niter=5, agebins=max(vcount(graph)/7100, 10)
         as.logical(error), as.numeric(debug), as.logical(verbose),
         PACKAGE="igraph")
 }
+
+evolver.ir <- function(graph, cats, window, niter=5,
+                      sd=FALSE, norm=FALSE, cites=FALSE, expected=FALSE,
+                      error=TRUE, debug=numeric(), verbose=igraph.par("verbose")) {
+  if (!is.igraph(graph)) {
+    stop("Not a graph object!")
+  }
+
+  .Call("R_igraph_evolver_ir", graph, as.numeric(cats), as.numeric(window),
+        as.numeric(niter),
+        as.logical(sd), as.logical(norm), as.logical(cites), as.logical(expected),
+        as.logical(error), as.numeric(debug), as.logical(verbose),
+        PACKAGE="igraph")
+}
+
